# structlog-extras

./: CHANGELOG.md  README.md  pyproject.toml  show_off.py  show_off_forwarder.py  show_off_json.py  show_off_otel.py
.github/workflows/: publish.yml
structlog_extras/: stdlib.py
