[project]
name = "structlog-extras"
description = "Various structlog additions, mainly focused on better stdlib integration"
version = "0.2.0"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexey Shokov" }]
keywords = ["logging", "structlog"]
dependencies = ["structlog >=24.0"]

[dependency-groups]
dev = ["python-dotenv", "rich", "orjson", "opentelemetry-exporter-otlp"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
build-backend.module-root = "" # Flat layout
build-backend.module-name = "structlog_extras"

[tool.ruff]
line-length = 120
format.docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "Q", # flake8-quotes
]
[tool.ruff.lint.pydocstyle]
convention = "google"
